release/v2026.4.0/de/CodeSystem-mii-cs-pro-questionnaire-catalogue.md
# MII CS PRO Questionnaire Catalogue - MII IG PRO v2026.4.0

## CodeSystem: MII CS PRO Questionnaire Catalogue 

 
MII CS PRO Questionnaire Catalogue for PRO Questionnaires used in the MII PROMs Module 

Dieses CodeSystem wird in der Definition der folgenden ValueSets referenziert:

* This CodeSystem is not used here; it may be used elsewhere (e.g. specifications and/or implementations that use this content)

-------

 [Beschreibung der obigen Tabelle(n)](http://build.fhir.org/ig/FHIR/ig-guidance/readingIgs.html#terminology). 



## Resource Content

```json
{
  "resourceType" : "CodeSystem",
  "id" : "mii-cs-pro-questionnaire-catalogue",
  "url" : "https://www.medizininformatik-initiative.de/fhir/ext/modul-pro/CodeSystem/mii-cs-pro-questionnaire-catalogue",
  "version" : "2026.4.0",
  "name" : "MII_CS_PRO_Questionnaire_Catalogue",
  "title" : "MII CS PRO Questionnaire Catalogue",
  "status" : "active",
  "date" : "2026-06-14T19:15:38+00:00",
  "publisher" : "Medizininformatik-Initiative",
  "contact" : [{
    "name" : "Medizininformatik-Initiative",
    "telecom" : [{
      "system" : "url",
      "value" : "https://www.medizininformatik-initiative.de"
    },
    {
      "system" : "email",
      "value" : "office@medizininformatik-initiative.de"
    }]
  }],
  "description" : "MII CS PRO Questionnaire Catalogue for PRO Questionnaires used in the MII PROMs Module",
  "jurisdiction" : [{
    "coding" : [{
      "system" : "http://unstats.un.org/unsd/methods/m49/m49.htm",
      "code" : "276"
    }]
  }],
  "content" : "complete",
  "count" : 17,
  "concept" : [{
    "code" : "euroqol-eq5d5l",
    "display" : "EuroQol EQ-5D-5L Questionnaire"
  },
  {
    "code" : "phq-phq9",
    "display" : "PHQ-9 Questionnaire"
  },
  {
    "code" : "bdi-bdi2",
    "display" : "Beck Depression Inventory II (BDI-II)"
  },
  {
    "code" : "promis-promis29",
    "display" : "PROMIS-29 Questionnaire"
  },
  {
    "code" : "promis-promis16",
    "display" : "PROMIS-16 Profile Questionnaire (ultra-short 8-domain profile)"
  },
  {
    "code" : "promis-depression-sf4a",
    "display" : "PROMIS Depression 4a Short Form Questionnaire"
  },
  {
    "code" : "promis-cognitive-function-sf4a",
    "display" : "PROMIS Cognitive Function Abilities 4a Short Form Questionnaire"
  },
  {
    "code" : "eortc-qlq-c30",
    "display" : "EORTC QLQ-C30 Quality of Life Questionnaire"
  },
  {
    "code" : "hads",
    "display" : "Hospital Anxiety and Depression Scale"
  },
  {
    "code" : "epds",
    "display" : "Edinburgh Postnatal Depression Scale"
  },
  {
    "code" : "ces-d",
    "display" : "Center for Epidemiologic Studies Depression Scale"
  },
  {
    "code" : "k6",
    "display" : "Kessler Psychological Distress Scale"
  },
  {
    "code" : "dass-dass21",
    "display" : "DASS-21 (Depression Anxiety Stress Scales - 21 Items)"
  },
  {
    "code" : "proctcae",
    "display" : "PRO-CTCAE (Patient-Reported Outcomes version of the Common Terminology Criteria for Adverse Events)"
  },
  {
    "code" : "proctcae-breast-de",
    "display" : "PRO-CTCAE German Breast Cancer Subset (21 Symptoms)"
  },
  {
    "code" : "proctcae-onkologisches-basisscreening",
    "display" : "PRO-CTCAE Onkologisches Basisscreening (DKG, MIDOS2-äquivalente Symptome)"
  },
  {
    "code" : "midos-midos2",
    "display" : "MIDOS2 (Minimales Dokumentationssystem für Palliativpatienten, DGP)"
  }]
}

```
